<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PostServiceActivity">

    <Spinner
        android:id="@+id/titleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        android:background="@drawable/custom_spinner_background"
        android:entries="@array/title_options"
        android:dropDownWidth="match_parent"
        android:popupBackground="#FFFFFF"
        android:prompt="@string/choose_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionEditText"
        style="@style/Description_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSpinner"
        android:hint="Description"
        android:inputType="textShortMessage" />

    <EditText
        android:id="@+id/priceEditText"
        style="@style/Price_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
        android:inputType="numberDecimal"
        android:hint="Price" />

    <TextView
        android:id="@+id/availabilityTextView"
        style="@style/Price_Style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEditText"
        android:hint="Availability" />

    <TextView
        android:id="@+id/startTimeTextView"
        style="@style/Price_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/endTimeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availabilityTextView"
        android:hint="Start Time"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/endTimeTextView"
        style="@style/Price_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startTimeTextView"
        app:layout_constraintTop_toBottomOf="@+id/availabilityTextView"
        android:hint="End Time"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/addressTextView"
        style="@style/Price_Style"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="Select Address"
        app:layout_constraintEnd_toStartOf="@+id/addressSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimeTextView" />

    <Spinner
        android:id="@+id/addressSpinner"
        style="@style/Description_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addressTextView"
        app:layout_constraintTop_toBottomOf="@+id/startTimeTextView"
        android:background="@drawable/custom_spinner_background"
        android:popupBackground="#FFFFFF"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/postServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressSpinner"
        android:text="Post Service" />

</androidx.constraintlayout.widget.ConstraintLayout>